feat: Add subscription management UI components
- Implemented SectionTitle widget for displaying section titles.
- Created SubscriptionStatusHeader widget to show current subscription plan details and upgrade option.
- Added UnlockAllFeaturesCTA widget for prompting users to upgrade their subscription.
- Developed UsagePeriodInfo widget to display the current usage period and reset information.
- Introduced VoiceMessageBubble widget for playing voice messages with audio fetching capabilities.
- Added VoiceRecorderWidget for recording voice messages with duration tracking.
- Implemented debug logging utilities for better error tracking and logging.
- Created GlobalKeyErrorHandler to manage GlobalKey related errors and logging.
- Updated Podfile.lock with new dependencies.
- Added version bumping scripts for managing app versioning.
- Created tests for ToastService to ensure proper message handling.
- Initialized build-version.json for version tracking.

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@ android/key.properties
 *.cert
 *.p12
 *.cer
+fastlane/asc_api_key.p8
 
 # Crash/coverage artifacts that may include paths
 **/crashlytics-build.properties
