--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -31,15 +31,10 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
@@ -55,5 +50,15 @@
 			</array>
 		</dict>
 	</array>
+	<!-- Photo library / camera usage descriptions -->
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs camera access to take profile photos.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs photo library access to select profile photos.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app may save images to your library when needed.</string>
+	<!-- Microphone access for optional voice messages -->
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app needs microphone access to record voice messages.</string>
 </dict>
 </plist>
