--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.3+2
 
 environment:
   sdk: ^3.9.2
@@ -54,6 +54,14 @@ dependencies:
   google_fonts: ^6.2.1
   firebase_core: ^3.5.0
   firebase_auth: ^5.3.1
+  permission_handler: ^11.3.1
+  palette_generator: ^0.3.3
+  path_provider: ^2.1.5
+  # Voice / audio
+  # Bumped to 5.3.x+ to ensure all platform implementations (linux, etc.) implement startStream introduced in platform_interface 1.4.0
+  # Upgrade to latest record package with consistent platform implementations.
+  record: ^6.1.1
+  just_audio: ^0.9.42
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +73,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  firebase_core_platform_interface: ^6.0.0
+  mockito: ^5.5.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -101,3 +111,6 @@ flutter:
           weight: 700
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+dependency_overrides:
+  # (none currently required)
