--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   image_picker: ^1.1.2
   emoji_picker_flutter: ^4.3.0
   google_sign_in: ^6.2.1
-  socket_io_client: ^3.0.2
+  web_socket_channel: ^3.0.1
   google_fonts: ^6.2.1
   firebase_core: ^3.5.0
   firebase_auth: ^5.3.1
