--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,14 +17,14 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.16.0'
+          flutter-version: '3.24.0'
 
       - name: Cache Flutter dependencies
         uses: actions/cache@v3
         with:
           path: |
             ~/.pub-cache
-            /opt/hostedtoolcache/flutter/stable-3.16.0-*/.pub-cache
+            /opt/hostedtoolcache/flutter/stable-3.24.0-*/.pub-cache
           key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
           restore-keys: |
             ${{ runner.os }}-flutter-
@@ -57,14 +57,14 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.16.0'
+          flutter-version: '3.24.0'
 
       - name: Cache Flutter dependencies
         uses: actions/cache@v3
         with:
           path: |
             ~/.pub-cache
-            /opt/hostedtoolcache/flutter/stable-3.16.0-*/.pub-cache
+            /opt/hostedtoolcache/flutter/stable-3.24.0-*/.pub-cache
           key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
           restore-keys: |
             ${{ runner.os }}-flutter-
@@ -91,14 +91,14 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.16.0'
+          flutter-version: '3.24.0'
 
       - name: Cache Flutter dependencies
         uses: actions/cache@v3
         with:
           path: |
             ~/.pub-cache
-            /opt/hostedtoolcache/flutter/stable-3.16.0-*/.pub-cache
+            /opt/hostedtoolcache/flutter/stable-3.24.0-*/.pub-cache
           key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
           restore-keys: |
             ${{ runner.os }}-flutter-
@@ -110,9 +110,10 @@ jobs:
         run: |
           flutter build ios --no-codesign
           xcodebuild -workspace ios/Runner.xcworkspace -scheme Runner -configuration Release -archivePath build/ios/archive/Runner.xcarchive archive
+          xcodebuild -exportArchive -archivePath build/ios/archive/Runner.xcarchive -exportPath build/ios/ipa -exportOptionsPlist ios/ExportOptions.plist
 
       - name: Upload iOS build
         uses: actions/upload-artifact@v3
         with:
           name: ios-build
-          path: build/ios/archive/Runner.xcarchive
+          path: build/ios/ipa/Runner.ipa
