--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,17 +17,23 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.16.0'
+          flutter-version: '3.29.0'
 
-      - name: Cache Flutter dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.pub-cache
-            /opt/hostedtoolcache/flutter/stable-3.16.0-*/.pub-cache
-          key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-flutter-
+       - name: Clear Flutter cache
+         run: |
+           flutter doctor
+           rm -rf ~/.pub-cache
+           rm -rf /opt/hostedtoolcache/flutter
+
+       - name: Cache Flutter dependencies
+         uses: actions/cache@v3
+         with:
+           path: |
+             ~/.pub-cache
+             /opt/hostedtoolcache/flutter/stable-3.29.0-*/.pub-cache
+           key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
+           restore-keys: |
+             ${{ runner.os }}-flutter-
 
       - name: Install dependencies
         run: flutter pub get
@@ -52,17 +58,23 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.16.0'
+          flutter-version: '3.29.0'
 
-      - name: Cache Flutter dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.pub-cache
-            /opt/hostedtoolcache/flutter/stable-3.16.0-*/.pub-cache
-          key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-flutter-
+       - name: Clear Flutter cache
+         run: |
+           flutter doctor
+           rm -rf ~/.pub-cache
+           rm -rf /opt/hostedtoolcache/flutter
+
+       - name: Cache Flutter dependencies
+         uses: actions/cache@v3
+         with:
+           path: |
+             ~/.pub-cache
+             /opt/hostedtoolcache/flutter/stable-3.29.0-*/.pub-cache
+           key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
+           restore-keys: |
+             ${{ runner.os }}-flutter-
 
       - name: Install dependencies
         run: flutter pub get
@@ -83,17 +95,23 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.16.0'
+          flutter-version: '3.29.0'
 
-      - name: Cache Flutter dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.pub-cache
-            /opt/hostedtoolcache/flutter/stable-3.16.0-*/.pub-cache
-          key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-flutter-
+       - name: Clear Flutter cache
+         run: |
+           flutter doctor
+           rm -rf ~/.pub-cache
+           rm -rf /opt/hostedtoolcache/flutter
+
+       - name: Cache Flutter dependencies
+         uses: actions/cache@v3
+         with:
+           path: |
+             ~/.pub-cache
+             /opt/hostedtoolcache/flutter/stable-3.29.0-*/.pub-cache
+           key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
+           restore-keys: |
+             ${{ runner.os }}-flutter-
 
       - name: Install dependencies
         run: flutter pub get
