--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,17 +75,23 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.24.0'
+          flutter-version: '3.29.0'
 
-      - name: Cache Flutter dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.pub-cache
-            /opt/hostedtoolcache/flutter/stable-3.24.0-*/.pub-cache
-          key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-flutter-
+       - name: Clear Flutter cache
+         run: |
+           flutter doctor
+           rm -rf ~/.pub-cache
+           rm -rf /opt/hostedtoolcache/flutter
+
+       - name: Cache Flutter dependencies
+         uses: actions/cache@v3
+         with:
+           path: |
+             ~/.pub-cache
+             /opt/hostedtoolcache/flutter/stable-3.29.0-*/.pub-cache
+           key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
+           restore-keys: |
+             ${{ runner.os }}-flutter-
 
       - name: Install dependencies
         run: flutter pub get
@@ -138,17 +144,23 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.24.0'
+          flutter-version: '3.29.0'
 
-      - name: Cache Flutter dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.pub-cache
-            /opt/hostedtoolcache/flutter/stable-3.24.0-*/.pub-cache
-          key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-flutter-
+       - name: Clear Flutter cache
+         run: |
+           flutter doctor
+           rm -rf ~/.pub-cache
+           rm -rf /opt/hostedtoolcache/flutter
+
+       - name: Cache Flutter dependencies
+         uses: actions/cache@v3
+         with:
+           path: |
+             ~/.pub-cache
+             /opt/hostedtoolcache/flutter/stable-3.29.0-*/.pub-cache
+           key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
+           restore-keys: |
+             ${{ runner.os }}-flutter-
 
       - name: Install dependencies
         run: flutter pub get
