--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ on:
 env:
   FLUTTER_CHANNEL: stable
   FLUTTER_VERSION: '3.35.4'
+  GOOGLESERVICE_INFO_PLIST_BASE64: ${{ secrets.GOOGLESERVICE_INFO_PLIST_BASE64 }}
 
 jobs:
   test:
@@ -123,6 +124,23 @@ jobs:
         with:
           channel: ${{ env.FLUTTER_CHANNEL }}
           flutter-version: ${{ env.FLUTTER_VERSION }}
+
+      - name: Generate GoogleService-Info.plist
+        if: ${{ env.GOOGLESERVICE_INFO_PLIST_BASE64 != '' }}
+        run: |
+          python3 - <<'PY'
+          import base64, os, pathlib
+
+          data = os.environ.get('GOOGLESERVICE_INFO_PLIST_BASE64', '').strip()
+          if not data:
+              raise SystemExit('GOOGLESERVICE_INFO_PLIST_BASE64 is empty')
+
+          plist_path = pathlib.Path('ios/Runner/GoogleService-Info.plist')
+          plist_path.parent.mkdir(parents=True, exist_ok=True)
+          plist_path.write_bytes(base64.b64decode(data))
+
+          print(f'Wrote {plist_path} from GOOGLESERVICE_INFO_PLIST_BASE64 secret')
+          PY
 
       - name: Create CI .env
         run: |
