--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ env:
   FLUTTER_CHANNEL: stable
   FLUTTER_VERSION: '3.35.4'
   GOOGLESERVICE_INFO_PLIST_BASE64: ${{ secrets.GOOGLESERVICE_INFO_PLIST_BASE64 }}
+  ASC_API_KEY_ID: ${{ secrets.ASC_API_KEY_ID }}
+  ASC_API_KEY_ISSUER_ID: ${{ secrets.ASC_API_KEY_ISSUER_ID }}
+  ASC_API_KEY_P8_BASE64: ${{ secrets.ASC_API_KEY_P8_BASE64 }}
 
 jobs:
   test:
@@ -164,11 +167,75 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Build iOS (no codesign)
-        run: flutter build ipa --no-codesign
+      - name: Install Ruby dependencies
+        run: |
+          gem install bundler -v '>=2.5.0'
+          bundle config set --local path vendor/bundle
+          bundle install --jobs 4 --retry 3
+
+      - name: Configure iOS signing assets
+        env:
+          IOS_CERT_BASE64: ${{ secrets.IOS_CERT_BASE64 }}
+          IOS_CERT_PASSWORD: ${{ secrets.IOS_CERT_PASSWORD }}
+          IOS_PROFILE_BASE64: ${{ secrets.IOS_PROFILE_BASE64 }}
+        run: |
+          set -euo pipefail
+
+          if [ -z "${IOS_CERT_BASE64:-}" ] || [ -z "${IOS_PROFILE_BASE64:-}" ]; then
+            echo "iOS signing secrets are not configured." >&2
+            exit 1
+          fi
+
+          CERT_PATH="$RUNNER_TEMP/dist.cer.p12"
+          PROFILE_PATH="$RUNNER_TEMP/profile.mobileprovision"
+          export CERT_PATH PROFILE_PATH
+
+          python3 - <<'PY'
+import base64, os, pathlib, sys
+
+def decode_to(path_env, output_path):
+    data = os.environ.get(path_env, '').strip()
+    if not data:
+        sys.exit(f"Environment variable {path_env} is missing")
+    pathlib.Path(output_path).write_bytes(base64.b64decode(data))
+
+decode_to('IOS_CERT_BASE64', os.environ['CERT_PATH'])
+decode_to('IOS_PROFILE_BASE64', os.environ['PROFILE_PATH'])
+PY
+
+          KEYCHAIN_PATH="$RUNNER_TEMP/app-signing.keychain-db"
+          KEYCHAIN_PASSWORD=$(openssl rand -hex 16)
+
+          security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          security import "$CERT_PATH" -k "$KEYCHAIN_PATH" -P "${IOS_CERT_PASSWORD:-}" -T /usr/bin/codesign -T /usr/bin/security
+          security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          security list-keychain -d user -s "$KEYCHAIN_PATH" $(security list-keychains -d user | sed 's/^[ \t]*//;s/"//g')
+
+          PROFILE_PLIST="$RUNNER_TEMP/profile.plist"
+          security cms -D -i "$PROFILE_PATH" > "$PROFILE_PLIST"
+          PROFILE_UUID=$(/usr/libexec/PlistBuddy -c 'Print:UUID' "$PROFILE_PLIST")
+          PROFILE_NAME=$(/usr/libexec/PlistBuddy -c 'Print:Name' "$PROFILE_PLIST")
+
+          PROFILES_DIR="$HOME/Library/MobileDevice/Provisioning Profiles"
+          mkdir -p "$PROFILES_DIR"
+          cp "$PROFILE_PATH" "$PROFILES_DIR/$PROFILE_UUID.mobileprovision"
+          rm -f "$PROFILE_PLIST"
+
+          echo "MATCH_KEYCHAIN=$KEYCHAIN_PATH" >> $GITHUB_ENV
+          echo "MATCH_KEYCHAIN_PASSWORD=$KEYCHAIN_PASSWORD" >> $GITHUB_ENV
+          echo "PROVISIONING_PROFILE_SPECIFIER=$PROFILE_NAME" >> $GITHUB_ENV
+          echo "PROVISIONING_PROFILE_UUID=$PROFILE_UUID" >> $GITHUB_ENV
+
+      - name: Run Fastlane (TestFlight)
+        env:
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+        run: bundle exec fastlane ios deploy_testflight
 
       - name: Upload IPA artifact
         uses: actions/upload-artifact@v4
         with:
           name: ios-ipa
-          path: build/ios/ipa/*.ipa
+          path: build/Runner.ipa
