fix: Update Fastlane command to set working directory for iOS deployment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -236,7 +236,8 @@ jobs:
         env:
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-        run: bundle exec fastlane --fastfile ios/fastlane/Fastfile ios deploy_testflight
+        working-directory: ios
+        run: bundle exec fastlane ios deploy_testflight
 
       - name: Upload IPA artifact
         uses: actions/upload-artifact@v4
