--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,5 +39,13 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+
+    target.build_configurations.each do |config|
+      deployment_target = config.build_settings['IPHONEOS_DEPLOYMENT_TARGET']
+      next unless deployment_target
+
+      # Align pod deployment targets with the app to avoid Xcode 16 warnings
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0' if deployment_target.to_f < 13.0
+    end
   end
 end
