--- a/native_ios/AroosiApp/Supporting/Info.plist
+++ b/native_ios/AroosiApp/Supporting/Info.plist
@@ -94,6 +94,13 @@
     <string>Aroosi Matrimony needs photo library access to let you select and upload profile photos for marriage proposals.</string>
     <key>NSUserTrackingUsageDescription</key>
     <string>Aroosi Matrimony uses tracking to personalize your marriage search experience and improve our matching algorithms.</string>
+    <key>NSUserNotificationUsageDescription</key>
+    <string>Aroosi Matrimony sends notifications for new messages, matches, and important updates to help you find your perfect marriage partner.</string>
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>remote-notification</string>
+        <string>background-processing</string>
+    </array>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>UIRequiredDeviceCapabilities</key>
